--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^1.3.3",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
