--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "element-ui": "^1.3.3",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-axios": "^2.0.2",
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
